--- a/leafletstyles.css
+++ b/leafletstyles.css
@@ -1,9 +1,9 @@
 /* General body styling */
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e9ecef;
+    background-color: #f4f4f4;
     color: #333;
 }
 
